body and section css styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>split on scroll</title>
 </head>
 <body>
-    
+    <section>
+        <div class="side side1"></div>
+        <div class="side side2"></div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
